--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="table-responsive appointments">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-hover">
     <thead>
       <tr>
             <th>Date</th>
