--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -21,6 +21,6 @@
   <dd><%= @appointment.comment %></dd>
 
   <dt>Created:</dt>
-  <dd><%= @todo.created_at %></dd>
+  <dd><%= @appointment.created_at %></dd>
 
 </dl>
