--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center jumbotron">
-  <h1>Welcome to the Pink Fit App App</h1>
-  <h3>This is the home page for the Rails Pink Fit App with AuthN and AuthZ.</h3>
+  <h1>Welcome to the Pink Fit Scheduling App!</h1>
+  <h3>This is the home page for the Rails Pink Fit Scheduling App with AuthN and AuthZ.</h3>
   <br/>
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
   <%= link_to "Sign in",      signin_path, class: "btn btn-large btn-primary" %>
