--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,11 +10,10 @@
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
+            <th>ID</th>
             <th>First name</th>
             <th>Last name</th>
             <th>Email</th>
-            <th>Password digest</th>
-            <th>Remember token</th>
             <th></th>
         <th></th>
         <th></th>
@@ -23,11 +22,10 @@
 
     <tbody>
       <%= content_tag_for(:tr, @users) do |user| %>
+            <td><%= user.id %></td>
             <td><%= user.first_name %></td>
             <td><%= user.last_name %></td>
             <td><%= user.email %></td>
-            <td><%= user.password_digest %></td>
-            <td><%= user.remember_token %></td>
             <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
