--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,6 +14,7 @@
             <th>First name</th>
             <th>Last name</th>
             <th>Email</th>
+            <th>Phone</th>
             <th></th>
         <th></th>
         <th></th>
@@ -26,6 +27,7 @@
             <td><%= user.first_name %></td>
             <td><%= user.last_name %></td>
             <td><%= user.email %></td>
+            <td><%= user.phone %></td>
             <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
