Admin permissions started

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -13,20 +13,20 @@
             <th>Date</th>
             <th>Time</th>
             <th>Comment</th>
-            <th>Show</th>
+            <th>View</th>
             <th>Edit</th>
-            <th>Destroy</th>
+            <th>Delete</th>
       </tr>
     </thead>
 
     <tbody>
       <%= content_tag_for(:tr, @appointments) do |appointment| %>
             <td><%= appointment.date %></td>
-            <td><%= appointment.time %></td>
+            <td><%= appointment.time.strftime("%I:%M %p") %></td>
             <td><%= appointment.comment %></td>
             <td><%= link_to 'Show', appointment %></td>
         <td><%= link_to 'Edit', edit_appointment_path(appointment) %></td>
-        <td><%= link_to 'Destroy', appointment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', appointment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
     </tbody>
   </table>
