--- a/app/assets/stylesheets/_superhero-variables.scss
+++ b/app/assets/stylesheets/_superhero-variables.scss
@@ -10,10 +10,10 @@
 $gray:                   lighten(#000, 33.5%) !default; // #555
 $gray-darker:            lighten(#000, 13.5%) !default; // #222
 $gray-dark:              lighten(#000, 20%) !default;   // #333
-$gray-light:             #4E5D6C !default;   // #999
+$gray-light:             #666666 !default;   // #999
 $gray-lighter:           #EBEBEB !default; // #eee
 
-$brand-primary:         #DF691A !default;
+$brand-primary:         #E60079 !default;
 $brand-success:         #5cb85c !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
@@ -179,7 +179,7 @@ $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2
 $navbar-collapse-max-height:       340px !default;
 
 $navbar-default-color:             $text-color !default;
-$navbar-default-bg:                #4E5D6C !default;
+$navbar-default-bg:                #E60079 !default;
 $navbar-default-border:            hsla(0, 100%, 100%, 0) !default;
 
 // Navbar links
