--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,8 +31,8 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 main {
-  margin: 20px auto;
-  width: 800px;
+  margin: 2% auto;
+  width: 90%;
 }
 
 .appointments {
@@ -42,16 +42,18 @@ main {
 }
 
 .btn-primary {
-  color: #ffffff;
+  color: #fff;
   background-color: #000000;
-  border-color: #ff0099;
+  border-color: #E60079;
   border-radius: 14px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 /* line 11, /Users/epperson/.rbenv/versions/2.2.4/lib/ruby/gems/2.2.0/gems/bootstrap-generators-3.3.4/vendor/twitter/bootstrap/sass/bootstrap/mixins/_buttons.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #333333;
-  border-color: #ffffff;
+  background-color: #E60079;
+  border-color: #000000;
 }
 /* line 21, /Users/epperson/.rbenv/versions/2.2.4/lib/ruby/gems/2.2.0/gems/bootstrap-generators-3.3.4/vendor/twitter/bootstrap/sass/bootstrap/mixins/_buttons.scss */
 .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
@@ -61,4 +63,28 @@ main {
 .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
   background-color: #666666;
   border-color: rgba(255, 255, 255, 0);
+}
+
+.jumbotron {
+  background-color: #333333;
+  border-color: #E60079;
+  border-radius: 14px;
+}
+
+.navbar {
+  font-size: 20px;
+}
+
+select, input{
+  background-color: #E60079;
+  font-weight: bold;
+}
+
+select:hover{
+  background-color: #000;
+}
+
+input:hover{
+  background-color: #E60079;
+  color: #FFF;
 }
