--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -21,7 +21,7 @@
   <div class="form-group">
     <%= f.label :time, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.time_select :time, class: "form-control" %>
+      <%= f.time_select :time, ampm: true, :minute_step => 5, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
