--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,4 +16,9 @@
   <dt>Email:</dt>
   <dd><%= @user.email %></dd>
 
+  <dt>Admin:</dt>
+  <dd><%= @user.admin %></dd>
+
+  <td><%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
 </dl>
