--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -3,13 +3,21 @@
     <span class="glyphicon glyphicon-plus"></span>
     New Appointment
   <% end %>
-  <h1>Listing appointments</h1>
+  <% if @current_user.admin? %>
+    <h1><%= Appointment.count %> Appointments</h1>
+  <% else %>
+    <h1>My Appointments</h1>
+  <% end %>
 </div>
 
 <div class="table-responsive appointments">
   <table class="table table-hover">
     <thead>
       <tr>
+            <% if @current_user.admin? %>
+              <th>User Name</th>
+              <th>User Email</th>
+            <% end %>
             <th>Date</th>
             <th>Time</th>
             <th>Comment</th>
@@ -21,6 +29,11 @@
 
     <tbody>
       <%= content_tag_for(:tr, @appointments) do |appointment| %>
+            <% if @current_user.admin? %>
+              <% @user = User.find(appointment.user_id) %>
+              <th><%= @user.first_name %> <%= @user.last_name %></th>
+              <th><%= User.find(appointment.user_id) %></th>
+            <% end %>
             <td><%= appointment.date %></td>
             <td><%= appointment.time.strftime("%I:%M %p") %></td>
             <td><%= appointment.comment %></td>
