--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-plus"></span>
     New User
   <% end %>
-  <h1>Listing users</h1>
+  <h1><%= User.count %> Users</h1>
 </div>
 
 <div class="table-responsive">
@@ -15,6 +15,9 @@
             <th>Last name</th>
             <th>Email</th>
             <th>Admin</th>
+            <th>View</th>
+            <th>Edit</th>
+            <th>Delete</th>
             <th></th>
         <th></th>
         <th></th>
@@ -30,7 +33,7 @@
             <td><%= user.admin %></td>
             <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
     </tbody>
   </table>
