--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,6 @@
   <dt>Admin:</dt>
   <dd><%= @user.admin %></dd>
 
-  <td><%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to 'Delete', @user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 
 </dl>
