--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,6 +2,6 @@
   <h1>Welcome to the Pink Fit Scheduling App!</h1>
   <h3>Under Construction - Launch Date: 1-22-2016</h3>
   <br/>
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %><br>
   <%= link_to "Sign in",      signin_path, class: "btn btn-large btn-primary" %>
 </div>
