--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,7 @@ input[type="radio"], input[type="checkbox"] {
 
 main {
   margin: 2% auto;
+  margin-top: 3%;
   width: 98%;
   background-color: rgba(255, 255, 255, 0.25);
   background-size: 100% 100%;
@@ -94,8 +95,8 @@ input:hover{
 }
 
 .fitlogo {
-  height: 10%;
-  width: 10%;
+  height: 5%;
+  width: 5%;
   float: left;
   margin-left: 5px;
   margin-right: 10px;
