--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -97,4 +97,8 @@ input:hover{
   margin-left: 5px;
   margin-right: 10px;
   border-radius: 50%;
+  max-height: 50px;
+  max-width: 50px;
+  min-height: 40px;
+  min-width: 40px;
 }
