--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -5,6 +5,7 @@
   <li><%= link_to 'Appointments', appointments_path %></li>
   <li><%= link_to @current_user, user_path(@current_user) %></li>
   <li><%= link_to 'Sign out', signout_path, method: 'delete' %></li>
+  <li><%= link_to 'Pink Fit', 'http://PinkFit.github.io' %></li>
 <% else %>
   <li><%= link_to 'Sign up', signup_path %></li>
   <li><%= link_to 'Sign in', signin_path %></li>
