--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -5,6 +5,7 @@
   <% end %>
   <% if @current_user.admin? %>
     <h1><%= Appointment.count %> Appointments</h1>
+    <%= @filter = select("date", "time", Appointment.all.collect(&:date)) %>
   <% else %>
     <h1>My Appointments</h1>
   <% end %>
