--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -4,8 +4,8 @@
     New Appointment
   <% end %>
   <% if @current_user.admin? %>
-    <h1><%= Appointment.count %> Appointments</h1>
-    <%= @filter = select("date", "time", Appointment.all.collect(&:date)) %>
+    <h1><%= @appointments.count %> Appointments</h1>
+    <%= select(:appointment, :date, Appointment.uniq.order(date: :asc).pluck(:date)) %>
   <% else %>
     <h1>My Appointments</h1>
   <% end %>
