format filter boxes for appointments index

--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -7,7 +7,7 @@
     <span class="glyphicon glyphicon-info-sign"></span>
     Show
   <% end %>
-  <h1>Editing appointment</h1>
+  <h1>Editing Appointment</h1>
 </div>
 
 <%= render 'form' %>
