added user filter drop down

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,7 @@
     New User
   <% end %>
   <h1><%= User.count %> Users</h1>
+  <%= render 'user_filter' %>
 </div>
 
 <div class="table-responsive">
