--- a/app/views/appointments/_filter.html.erb
+++ b/app/views/appointments/_filter.html.erb
@@ -2,19 +2,19 @@
   <div class="form-group">
     <%= f.label :date, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= select(:appointment, :date, Appointment.uniq.order(date: :asc).pluck(:date)) %>
+      <%= @date_filter = select(:appointment, :date, Appointment.uniq.order(date: :asc).pluck(:date)) %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :time, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.time_select :time, ampm: true, :minute_step => 5, class: "form-control" %>
+      <%= @time_filter = f.time_select :time, ampm: true, :minute_step => 5, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :comment, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= select(:appointment, :comment, Appointment.uniq.pluck(:comment)) %>
+      <%= @comment_filter = select(:appointment, :comment, Appointment.uniq.pluck(:comment)) %>
     </div>
   </div>
 <% end %>
