--- a/app/views/users/_user_filter.erb
+++ b/app/views/users/_user_filter.erb
@@ -1,4 +1,4 @@
-<%= form_for(:user, html: { class: "form-horizontal", role: "user_filter" }) do |f| %>
+<%= form_for(:user, html: { class: "form-horizontal", role: "user_filter" }) :get do |f| %>
   <div class="form-group">
     <%= f.label :first_name, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
@@ -21,6 +21,11 @@
     <%= f.label :id, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= @id_filter = select(:user, :id, User.uniq.order(id: :asc).pluck(:id)) %>
+    </div>
+  </div>
+    <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= submit_tag 'Filter', class: "btn btn-primary" %>
     </div>
   </div>
 <% end %>
