--- a/app/views/users/filter.erb
+++ b/app/views/users/filter.erb
@@ -1,15 +1,10 @@
 <div class="page-header">
-  <%= link_to new_user_path, class: 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-plus"></span>
-    New User
+  <%= link_to users_path, class: 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Back
   <% end %>
-  <h1><%= User.count %> Users</h1>
-  <%= form_tag 'user_filter', :method => :get do %>
-    <%= select(:user, :email, User.uniq.order(email: :asc).pluck(:email)) %>
-    <%= submit_tag 'Filter', class: "btn btn-primary" %>
-  <% end %>
+<h1><%= User.count %> Users</h1>
 </div>
-
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
@@ -24,7 +19,6 @@
             <th>Delete</th>
       </tr>
     </thead>
-
     <tbody>
       <%= content_tag_for(:tr, @users) do |user| %>
             <td><%= user.id %></td>
