--- a/app/views/users/filter.erb
+++ b/app/views/users/filter.erb
@@ -2,8 +2,8 @@
   <%= link_to users_path, class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
-  <% end %>
-<h1><%= User.count %> Users</h1>
+  <% end %><br>
+  <h1><%= "Filtered Users" %></h1>
 </div>
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
