--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -11,7 +11,9 @@
 </div>
   <%= form_tag 'app_filter', :method => :get do %>
     <%= select(:appointment, :date, Appointment.uniq.order(date: :asc).pluck(:date)) %>
-    <%= submit_tag 'Filter', class: "btn btn-primary" %>
+    <% if Appointment.count > 0 %>
+      <%= submit_tag 'Filter', class: "btn btn-primary" %>
+    <% end %>
   <% end %><br>
 <div class="table-responsive appointments">
   <table class="table table-hover">
