--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,9 @@
   <h1><%= @users.count %> Users</h1>
   <%= form_tag 'user_filter', :method => :get do %>
     <%= select(:user, :email, User.uniq.order(email: :asc).pluck(:email)) %>
-    <%= submit_tag 'Filter', class: "btn btn-primary" %>
+    <% if User.count > 0 %>
+      <%= submit_tag 'Filter', class: "btn btn-primary" %>
+    <% end %>
   <% end %>
 </div>
 
