--- a/app/views/user_notifier/send_signup_email.html.erb
+++ b/app/views/user_notifier/send_signup_email.html.erb
@@ -5,7 +5,6 @@
   </head>
   <body>
     <h1>Thanks for signing up, <%= @user.first_name %>!</h1>
-    <p>Thanks for joining and have a great day! Now sign in and do
-awesome things!</p>
+    <p>Thanks for joining and have a great day! Now sign in and schedule a training session!</p>
   </body>
 </html>
