fixed create and filter bugs

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,4 +8,5 @@
   <li><a href="http://getbootstrap.com/">Twitter Bootstrap 3.3</a></li>
   <li><a href="http://sass-lang.com/">SASS 3.4</a></li>
   <li><a href="https://github.com/decioferreira/bootstrap-generators">bootstrap-generators 3.3</a></li>
+  <li><a href="https://sendgrid.com/">SendGrid</a></li>
 </ul>
