--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -4,12 +4,20 @@
     New Appointment
   <% end %>
   <% if @current_user.admin? %>
-    <h1><%= @appointments.count %> Appointments</h1><br>
+    <% if @appointments.count > 0 %>
+      <h1><%= @appointments.count %> Appointments</h1><br>
+    <% else %>
+      <h1>No Appointments</h1><br>
+    <% end %>
   <% else %>
-    <h1>My Appointments</h1>
+    <% if @appointments.count > 0 %>
+      <h1><%= @appointments.count %> Appointments</h1><br>
+    <% else %>
+      <h1>No appointments scheduled.</h1><br>
+    <% end %>
   <% end %>
 </div>
-<%= @userapp %>
+<% if @appointments.count > 0 %>
   <%= 'Date' %>
   <%= form_tag 'app_filter', :method => :get do %>
     <%= select(:appointment, :date, @appointments.order(date: :asc).pluck(:date)) %>
@@ -31,6 +39,7 @@
       <%= submit_tag 'Filter', class: "btn btn-primary" %>
     <% end %>
   <% end %>
+<% end %>
 <br><div class="table-responsive appointments">
   <table class="table table-hover">
     <thead>
