--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'About') %>
-<h2>A Simple Appointment App with User Authentication</h2>
+<h2>Trainer Session Scheduling Application</h2>
 <h4>Technologies include:</h4>
 <ul>
   <li><a href="https://www.ruby-lang.org/">Ruby 2.2</a></li>
