--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,14 @@
 <div class="text-center jumbotron">
-  <h1>Welcome to the Pink Fit Scheduling App!</h1>
-  <h3>Under Construction - Launch Date: 1-22-2016</h3>
-  <br/>
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-  <%= link_to "Sign in",      signin_path, class: "btn btn-large btn-primary" %>
+<div class="bck">
+  <div class="fre">
+    <h1>Pink Fit</h1>
+    <h2>Training Session Portal</h2>
+    <br>
+    <div>
+      <br/>
+      <a><%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %></a>
+      <a><%= link_to "Sign in",      signin_path, class: "btn btn-large btn-primary" %></a>
+    </div>
+  </div>
+</div>
 </div>
