--- a/app/assets/stylesheets/_superhero-variables.scss
+++ b/app/assets/stylesheets/_superhero-variables.scss
@@ -13,7 +13,7 @@ $gray-dark:              lighten(#000, 20%) !default;   // #333
 $gray-light:             #666666 !default;   // #999
 $gray-lighter:           #EBEBEB !default; // #eee
 
-$brand-primary:         #E60079 !default;
+$brand-primary:         #ff3399 !default;
 $brand-success:         #5cb85c !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
@@ -179,7 +179,7 @@ $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2
 $navbar-collapse-max-height:       340px !default;
 
 $navbar-default-color:             $text-color !default;
-$navbar-default-bg:                #E60079 !default;
+$navbar-default-bg:                #ff3399 !default;
 $navbar-default-border:            hsla(0, 100%, 100%, 0) !default;
 
 // Navbar links
